@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.nextbreakpoint</groupId>
     <artifactId>com.nextbreakpoint.blueprint.bom</artifactId>
-    <version>1.0.0-wip2-17d5050-1646244085</version>
+    <version>1.0.0-wip2-1b3c8b7-1646260119</version>
     <packaging>pom</packaging>
     <licenses>
         <license>
@@ -176,6 +176,7 @@
                         <include>**/*Test.java</include>
                     </includes>
                     <useSystemClassLoader>false</useSystemClassLoader>
+                    <argLine>--add-opens=com.nextbreakpoint.blueprint.common.core/com.nextbreakpoint.blueprint.common.core=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
             <plugin>
